DynamicAnalysis modi